src/test/deca/context/valid/provided/TestIfvide.deca
//if Vide
{
    if (1==2){
        
    }
}