src/test/deca/context/invalid/provided/test_condition_if.deca
//if condition not bool

{
    int x = 1 ;
    if (x) {
        println("samatchi");
    }
}